--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #logging.level.org.springframework = debug
 spring.messages.basename=messages
-server.port=8090
+server.port=8080
+logging.pattern.console=%d{dd/MM/yyyy HH:mm:ss:SSS} | %t | %5p | %F %M L%L | %m %n
+management.endpoints.web.exposure.include=*
