--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 #logging.level.org.springframework = debug
 spring.messages.basename=messages
 server.port=8080
-logging.pattern.console=%d{dd/MM/yyyy HH:mm:ss:SSS} | %t | %5p | %F %M L%L | %m %n
+#logging.pattern.console=%d{dd/MM/yyyy HH:mm:ss:SSS} | %t | %5p | %F %M L%L | %m %n
 management.endpoints.web.exposure.include=*
+spring.security.user.name=ijruiz
+spring.security.user.password=s3cr3t
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.h2.console.enabled=true
