config server configuration
se agrega configuración de config server

--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.application.name=spring-cloud-config-server
+server.port=8888
 
+spring.cloud.config.server.git.uri=file:///Users/ijruiz/Desktop/MicroServices_With_Spring_Boot_And_Spring_Cloud/git-localconfig-repo
